# streaming-project

./: Makefile  Pipfile  README.md  pyproject.toml  pyproject.toml m-a
notebooks/: 00 - data_download.ipynb
streaming-project-py3.10/: pyvenv.cfg
