[tool.poetry]
name = "streaming-project"
version = "0.1.0"
description = "Um projeto de streaming"
authors = ["Helen Carneiro <helencarneiro99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
